--- a/hammers/emacs/literate.org
+++ b/hammers/emacs/literate.org
@@ -58,83 +58,23 @@
     #+BEGIN_SRC elisp :eval never :exports code
       (use-package org
 	:diminish org-mode
-	:preface
-	(defun m/refile-targets ()
-	  "Refile targets with inbox.org excluded"
-	  (let ((excluded '("mobile.org" "inbox.org" "notes.org")))
-	    (seq-filter (lambda (f) (if (member (file-name-nondirectory f) excluded) nil t)) org-agenda-files)))
 	:custom
 	(org-src-fontify-natively t)
 	(org-descriptive-links nil)
 	(org-special-ctrl-a/e t)
 	(org-use-sub-superscripts '{})
 	(org-export-with-sub-superscripts '{})
-	(private-directory "~/agendas")
-	(org-directory private-directory)
 	(org-confirm-babel-evaluate nil)
-	(org-clock-out-remove-zero-time-clocks t)
 	(org-startup-folded 'content)
-	(org-columns-default-format "%50ITEM(Task) %5TODO(Todo) %10Effort(Effort){:} %10CLOCKSUM(Clock) %2PRIORITY %TAGS")
-	(org-agenda-columns-add-appointments-to-effort-sum t)
-	(org-agenda-span 'day)
-	(org-agenda-skip-scheduled-if-done t)
-	(org-agenda-skip-deadline-if-done t)
-	(org-agenda-log-mode-items (quote (closed clock)))
-	(org-agenda-clockreport-parameter-plist
-	 '(:maxlevel 5 :block t :tstart t :tend t :emphasize t :link t :narrow 80 :indent t :formula nil :timestamp t :level 5 :tcolumns nil :formatter nil))
-	(org-global-properties (quote ((
-					"Effort_ALL" . "00:05 00:10 00:15 00:30 01:00 01:30 02:00 02:30 03:00"))))
-	(org-agenda-files `(
-			    ,(expand-file-name "inbox.org" private-directory)
-			    ,(expand-file-name "todos.org" private-directory)
-			    ,(expand-file-name "mobile.org" private-directory)
-			    ,(expand-file-name "routine.org" private-directory)
-			    ))
-	(org-archive-location (concat (expand-file-name "archive.org" private-directory) "::datetree/* Finished Tasks"))
-	(org-support-shift-select t)
-
-	;; Targets start with the file name - allows creating level 1 tasks
-	;;(setq org-refile-use-outline-path (quote file))
-	(org-refile-use-outline-path t)
-	(org-outline-path-complete-in-steps nil)
-
-	;; Allow refile to create parent tasks with confirmation
-	(org-refile-use-cache t)
-
-	(org-refile-allow-creating-parent-nodes 'confirm)
-	(org-refile-targets '((m/refile-targets :maxlevel . 5)))
-	(org-archive-mark-done nil)
-	      ;;; Agenda views
-	(org-agenda-clockreport-parameter-plist '(:link t :maxlevel 3))
-	;; (org-agenda-current-time-string "------------NOW------------")
-	;; (org-agenda-time-grid
-	;;     '((daily today require-timed)
-	;;       (0800 1000 1100 1200 1300 1400 1500 1600 1700 1800 1900 2000 2100 2200 2300)
-	;;       " ........ "
-	;;       "---------------------------"))
-	(org-clock-persist t)
-	(org-log-done t)
 	(org-edit-timestamp-down-means-later t)
 	(org-hide-emphasis-markers t)
 	(org-catch-invisible-edits 'show)
 	(org-export-coding-system 'utf-8)
 	(org-fast-tag-selection-single-key 'expert)
-	(org-clock-in-resume t)
-	;; Save clock data and notes in the LOGBOOK drawer
-	(org-clock-into-drawer t)
-	;; Save state changes in the LOGBOOK drawer
-	(org-log-into-drawer t)
-	;; Removes clocked tasks with 0:00 duration
-	(org-clock-out-remove-zero-time-clocks t)
-	;; Show clock sums as hours and minutes, not "n days" etc.
-	(org-time-clocksum-format '(:hours "%d" :require-hours t :minutes ":%02d" :require-minutes t))
 	:custom-face
 	(org-link ((t (:foreground "#ebe087" :underline t))))
 	(org-list-dt ((t (:foreground "#bd93f9"))))
-	(org-special-keyword ((t (:foreground "#6272a4"))))
-	(org-todo ((t (:background "#272934" :foreground "#51fa7b" :weight bold))))
 	(org-document-title ((t (:foreground "#f1fa8c" :weight bold))))
-	(org-done ((t (:background "#373844" :foreground "#216933" :strike-through nil :weight bold))))
 	(org-footnote ((t (:foreground "#76e0f3"))))
 
 	;; do not scale outline header
@@ -143,45 +83,22 @@
 	;; (org-level-3 ((t (:inherit outline-3 :height 1.0))))
 	;; (org-level-4 ((t (:inherit outline-4 :height 1.0))))
 	;; (org-level-5 ((t (:inherit outline-5 :height 1.0))))
-	:bind (("C-c c" . org-capture)
-	       ("C-c a" . org-agenda)
-	       ("C-c b" . org-switchb)
-	       ("C-x C-l" . org-store-link)
-	       :map org-mode-map
-	       ("C-c i" . org-clock-in)
-	       ("C-c o" . org-clock-out)
-	       ("C-c n" . org-narrow-to-subtree)
-	       ("C-c b" . org-narrow-to-block)
-	       ("C-c {" . sp-wrap-curly)
-	       ("C-c (" . sp-wrap-round)
-	       ("C-c [" . sp-wrap-square)
-	       ("C-c w" . widen)
-	       ("C-c e" . org-set-effort))
+	:bind 
+	(("C-c b" . org-switchb)
+	 ("C-x C-l" . org-store-link)
+	 :map org-mode-map
+	 ("C-c n" . org-narrow-to-subtree)
+	 ("C-c b" . org-narrow-to-block)
+	 ("C-c {" . sp-wrap-curly)
+	 ("C-c (" . sp-wrap-round)
+	 ("C-c [" . sp-wrap-square)
+	 ("C-c w" . widen))
 	:hook
-	(org-agenda-after-show . org-show-entry)
-	(org-agenda-mode . hl-line-mode)
 	(org-mode . (lambda ()
 		      (dolist (key '("C-'" "C-," "C-."))
 			(unbind-key key org-mode-map))))
 	:config
 	(advice-add 'org-refile :after (lambda (&rest _) (org-save-all-org-buffers)))
-	(advice-add 'org-deadline       :after (lambda (&rest _rest)  (org-save-all-org-buffers)))
-	(advice-add 'org-schedule       :after (lambda (&rest _rest)  (org-save-all-org-buffers)))
-	(advice-add 'org-agenda-schedule       :after (lambda (&rest _rest)  (org-save-all-org-buffers)))
-	(advice-add 'org-agenda-capture       :after (lambda (&rest _rest)  (org-save-all-org-buffers)))
-	(advice-add 'org-store-log-note :after (lambda (&rest _rest)  (org-save-all-org-buffers)))
-	(advice-add 'org-todo           :after (lambda (&rest _rest)  (org-save-all-org-buffers)))
-	(setq org-todo-keywords
-	      (quote (
-		      (sequence "TODO(t)" "NEXT(n)" "|" "DONE(d!/!)")
-		      (sequence "PROJECT(p)" "|" "DONE(d!/!)" "CANCELLED(c@/!)")
-		      (sequence "WAITING(w@/!)" "DELEGATED(e!)" "HOLD(h)" "|" "CANCELLED(c@/!)")
-		      ))
-	      org-todo-repeat-to-state "NEXT")
-	(setq org-todo-keyword-faces
-	      '(("WAIT" . (:foreground "#6272a4":weight bold))
-		("NEXT"   . (:foreground "#f1fa8c" :weight bold))
-		("CARRY/O" . (:foreground "#6272a4" :background "#373844" :weight bold))))
 	;; load babel languages
 	(org-babel-do-load-languages
 	 'org-babel-load-languages
@@ -242,8 +159,53 @@
 *** org-mode 日程配置
     #+BEGIN_SRC elisp :eval never :exports code
       (use-package org
+	:preface
+	(defun m/refile-targets ()
+	  "Refile targets with inbox.org excluded"
+	  (let ((excluded '("mobile.org" "inbox.org" "notes.org")))
+	    (seq-filter (lambda (f) (if (member (file-name-nondirectory f) excluded) nil t)) org-agenda-files)))
 	:custom
+	(org-directory "agendas")
 	(org-agenda-include-diary t)
+	(org-agenda-time-grid
+	 '((daily today require-timed)
+	   (800 1000 1200 1400 1600 1800 2000)
+	   " ........ "
+	   "---------------------------"))
+	(org-clock-out-remove-zero-time-clocks t)
+	(org-columns-default-format "%50ITEM(Task) %5TODO(Todo) %10Effort(Effort){:} %10CLOCKSUM(Clock) %2PRIORITY %TAGS")
+	(org-agenda-columns-add-appointments-to-effort-sum t)
+	(org-agenda-span 'day)
+	(org-agenda-skip-scheduled-if-done t)
+	(org-agenda-skip-deadline-if-done t)
+	(org-log-done t)
+	(org-agenda-log-mode-items (quote (closed clock)))
+	(org-agenda-clockreport-parameter-plist
+	 '(:maxlevel 5 :block t :tstart t :tend t :emphasize t :link t :narrow 80 :indent t :formula nil :timestamp t :level 5 :tcolumns nil :formatter nil))
+	(org-global-properties (quote ((
+					"Effort_ALL" . "00:05 00:10 00:15 00:30 01:00 01:30 02:00 02:30 03:00"))))
+	(org-agenda-files `(
+			    ,(expand-file-name "inbox.org" private-directory)
+			    ,(expand-file-name "todos.org" private-directory)
+			    ,(expand-file-name "mobile.org" private-directory)
+			    ,(expand-file-name "routine.org" private-directory)
+			    ))
+	(org-archive-location (concat (expand-file-name "archive.org" private-directory) "::datetree/* Finished Tasks"))
+	(org-support-shift-select t)
+
+	;; Targets start with the file name - allows creating level 1 tasks
+	;;(setq org-refile-use-outline-path (quote file))
+	(org-refile-use-outline-path t)
+	(org-outline-path-complete-in-steps nil)
+
+	;; Allow refile to create parent tasks with confirmation
+	(org-refile-use-cache t)
+
+	(org-refile-allow-creating-parent-nodes 'confirm)
+	(org-refile-targets '((m/refile-targets :maxlevel . 5)))
+	(org-archive-mark-done nil)
+	      ;;; Agenda views
+	(org-agenda-clockreport-parameter-plist '(:link t :maxlevel 3))
 	(org-agenda-custom-commands
 	 `(("N" "Notes" tags "NOTE"
 	    ((org-agenda-overriding-header "Notes")
@@ -272,7 +234,7 @@
 			 (org-agenda-start-day nil)
 			 (org-agenda-start-on-weekday nil)
 			 (org-agenda-compact-blocks t)
-			 (org-agenda-use-time-grid nil)))
+			 (org-agenda-use-time-grid t)))
 	     (agenda "" ((org-agenda-scheduled-leaders '("" "Due %2dx: "))
 			 (org-agenda-skip-function '(lambda () (let ((next-headline (save-excursion (or (outline-next-heading) (point-max))))
 								(current-headline (or (and (org-at-heading-p)
@@ -359,7 +321,39 @@
 	     ;; (tags-todo "-NEXT"
 	     ;;            ((org-agenda-overriding-header "All other TODOs")
 	     ;;             (org-match-list-sublevels t)))
-	     )))))
+	     ))))
+	:bind
+	(("C-c c" . org-capture)
+	 ("C-c a" . org-agenda)
+	 :map org-mode-map
+	 ("C-c i" . org-clock-in)
+	 ("C-c o" . org-clock-out)
+	 ("C-c e" . org-set-effort))
+	:hook
+	(org-agenda-after-show . org-show-entry)
+	(org-agenda-mode . hl-line-mode)
+	:custom-face
+	(org-special-keyword ((t (:foreground "#6272a4"))))
+	(org-todo ((t (:background "#272934" :foreground "#51fa7b" :weight bold))))
+	(org-done ((t (:background "#373844" :foreground "#216933" :strike-through nil :weight bold))))
+	:config
+	(advice-add 'org-deadline       :after (lambda (&rest _rest)  (org-save-all-org-buffers)))
+	(advice-add 'org-schedule       :after (lambda (&rest _rest)  (org-save-all-org-buffers)))
+	(advice-add 'org-agenda-schedule       :after (lambda (&rest _rest)  (org-save-all-org-buffers)))
+	(advice-add 'org-agenda-capture       :after (lambda (&rest _rest)  (org-save-all-org-buffers)))
+	(advice-add 'org-store-log-note :after (lambda (&rest _rest)  (org-save-all-org-buffers)))
+	(advice-add 'org-todo           :after (lambda (&rest _rest)  (org-save-all-org-buffers)))
+	(setq org-todo-keywords
+	      (quote (
+		      (sequence "TODO(t)" "NEXT(n)" "|" "DONE(d!/!)")
+		      (sequence "PROJECT(p)" "|" "DONE(d!/!)" "CANCELLED(c@/!)")
+		      (sequence "WAITING(w@/!)" "DELEGATED(e!)" "HOLD(h)" "|" "CANCELLED(c@/!)")
+		      ))
+	      org-todo-repeat-to-state "NEXT")
+	(setq org-todo-keyword-faces
+	      '(("WAIT" . (:foreground "#6272a4":weight bold))
+		("NEXT"   . (:foreground "#f1fa8c" :weight bold))
+		("CARRY/O" . (:foreground "#6272a4" :background "#373844" :weight bold)))))
     #+END_SRC
 *** org-mode clock 配置
     #+BEGIN_SRC elisp :eval never :exports code
@@ -370,6 +364,17 @@
 	(m/pomodoro/task/current nil)
 	(m/pomodoro/task/next nil)
 	(m/pomodoro/status/updater nil)
+	(org-clock-in-resume t)
+	;; Save clock data and notes in the LOGBOOK drawer
+	(org-clock-into-drawer t)
+	;; Save state changes in the LOGBOOK drawer
+	(org-log-into-drawer t)
+	;; Removes clocked tasks with 0:00 duration
+	(org-clock-out-remove-zero-time-clocks t)
+	;; Show clock sums as hours and minutes, not "n days" etc.
+	(org-time-clocksum-format '(:hours "%d" :require-hours t :minutes ":%02d" :require-minutes t))
+	;; (org-agenda-current-time-string "------------NOW------------")
+	(org-clock-persist t)
 	:preface
 	(defun m/org-clock-out-and-save-when-exit ()
 	  "Save buffers and stop clocking when kill emacs."
