--- a/hammers/karabiner/mapping.org
+++ b/hammers/karabiner/mapping.org
@@ -165,477 +165,396 @@
      #+NAME: right_command_to_hyper
      #+BEGIN_SRC json :eval never :exports code :noweb yes
        {
-         "description": "Right Command Key → Hyper Key (⌃⌥⇧⌘)",
+           "description": "Right Command Key → Hyper Key (⌃⌥⇧⌘)",
+           "manipulators": [
+               {
+               "from": {
+                   "key_code": "right_command",
+                   "modifiers": {
+                       "optional": [
+                           "any"
+                       ]
+                   }
+               },
+               "to": [
+                   {
+                   "key_code": "left_shift",
+                   "modifiers": [
+                       "left_command",
+                       "left_control",
+                       "left_option"
+                   ]
+               }
+               ],
+               "type": "basic"
+           }
+           ]
+       }
+     #+END_SRC
+     
+**** Swap Option&Command for Vmware Horizon
+     #+NAME: map_command_tab_to_option_tab_under_vmware_horizon
+     #+BEGIN_SRC json :eval never :exports code :noweb yes
+       {
+         "description": "Swap Option&Command for Vmware Horizon",
          "manipulators": [
            {
+             "type": "basic",
              "from": {
-               "key_code": "right_command",
+               "key_code": "tab",
                "modifiers": {
                  "optional": [
-                   "any"
+                   "shift"
+                 ],
+                 "mandatory": [
+                   "left_option"
                  ]
                }
              },
              "to": [
                {
-                 "key_code": "left_shift",
+                 "key_code": "tab",
                  "modifiers": [
-                   "left_command",
-                   "left_control",
-                   "left_option"
+                   "left_command"
                  ]
                }
              ],
-             "type": "basic"
+             "conditions": [
+               {
+                 "type": "frontmost_application_if",
+                 "bundle_identifiers": [
+                   "com.vmware.horizon"
+                 ]
+               }
+             ]
            }
          ]
        }
      #+END_SRC
-     
+     #+NAME: map_option_tab_to_command_tab_under_vmware_horizon
+     #+BEGIN_SRC json :eval never :exports code :noweb yes
+       {
+         "description": "Swap Option&Command for Vmware Horizon",
+         "manipulators": [
+           {
+             "type": "basic",
+             "from": {
+               "key_code": "tab",
+               "modifiers": {
+                 "optional": [
+                   "shift"
+                 ],
+                 "mandatory": [
+                   "left_command"
+                 ]
+               }
+             },
+             "to": [
+               {
+                 "key_code": "tab",
+                 "modifiers": [
+                   "left_alt"
+                 ]
+               }
+             ],
+             "conditions": [
+               {
+                 "type": "frontmost_application_if",
+                 "bundle_identifiers": [
+                   "com.vmware.horizon"
+                 ]
+               }
+             ]
+           }
+         ]
+       }
+     #+END_SRC
 
 *** karabiner 系统配置（将所有配置合并到配置文件中）
     #+BEGIN_SRC json :eval never :exports code :tangle (m/resolve "${m/xdg.conf.d}/karabiner/karabiner.json") :noweb yes
       {
-        "global": {
-          "check_for_updates_on_startup": true,
-          "show_in_menu_bar": true,
-          "show_profile_name_in_menu_bar": false,
-          "unsafe_ui": false
-        },
-        "profiles": [
-          {
-            "complex_modifications": {
-              "parameters": {
-                "basic.simultaneous_threshold_milliseconds": 50,
-                "basic.to_delayed_action_delay_milliseconds": 500,
-                "basic.to_if_alone_timeout_milliseconds": 1000,
-                "basic.to_if_held_down_threshold_milliseconds": 500,
-                "mouse_motion_to_scroll.speed": 100
-              },
-              "rules": [
-                {
-                  "description": "Change Command-\\ to Hyper-p to fill with 1Password",
-                  "manipulators": [
-                    {
-                      "conditions": [
-                        {
-                          "bundle_identifiers": [
-                            "org.gnu.Emacs"
-                          ],
-                          "type": "frontmost_application_unless"
-                        }
-                      ],
-                      "from": {
-                        "key_code": "backslash",
-                        "modifiers": {
-                          "mandatory": [
-                            "left_command"
-                          ],
-                          "optional": [
-                            "any"
-                          ]
-                        }
-                      },
-                      "to": [
-                        {
-                          "key_code": "p",
-                          "modifiers": [
-                            "left_control",
-                            "left_alt",
-                            "left_shift",
-                            "left_command"
-                          ]
-                        }
-                      ],
-                      "type": "basic"
-                    }
-                  ]
-                },
-                {
-                  "description": "Change Command-Space to Hyper-I to change input method, except Emacs",
-                  "manipulators": [
-                    {
-                      "conditions": [
-                        {
-                          "bundle_identifiers": [
-                            "org.gnu.Emacs"
-                          ],
-                          "type": "frontmost_application_unless"
-                        }
-                      ],
-                      "from": {
-                        "key_code": "spacebar",
-                        "modifiers": {
-                          "mandatory": [
-                            "left_command"
-                          ],
-                          "optional": [
-                            "any"
-                          ]
-                        }
-                      },
-                      "to": [
-                        {
-                          "key_code": "i",
-                          "modifiers": [
-                            "left_control",
-                            "left_alt",
-                            "left_shift",
-                            "left_command"
-                          ]
-                        }
-                      ],
-                      "type": "basic"
-                    }
-                  ]
-                },
-                {
-                  "description": "Change Ctrl-Shift-A to Hyper-4 capture by snipaste, except Emacs",
-                  "manipulators": [
-                    {
-                      "conditions": [
-                        {
-                          "bundle_identifiers": [
-                            "org.gnu.Emacs"
-                          ],
-                          "type": "frontmost_application_unless"
-                        }
-                      ],
-                      "from": {
-                        "key_code": "a",
-                        "modifiers": {
-                          "mandatory": [
-                            "left_command",
-                            "left_control"
-                          ]
-                        }
-                      },
-                      "to": [
-                        {
-                          "key_code": "4",
-                          "modifiers": [
-                            "left_control",
-                            "left_alt",
-                            "left_shift",
-                            "left_command"
-                          ]
-                        }
-                      ],
-                      "type": "basic"
-                    }
-                  ]
-                },
-                {
-                  "description": "CapsLock to Ctrl/Escape",
-                  "manipulators": [
-                    {
-                      "from": {
-                        "key_code": "caps_lock",
-                        "modifiers": {
-                          "optional": [
-                            "any"
-                          ]
-                        }
-                      },
-                      "to": [
-                        {
-                          "key_code": "left_control",
-                          "lazy": true
-                        }
-                      ],
-                      "to_if_alone": [
-                        {
-                          "key_code": "escape"
-                        }
-                      ],
-                      "type": "basic"
-                    }
-                  ]
-                },
-                {
-                  "description": "Right Command Key → Hyper Key (⌃⌥⇧⌘)",
-                  "manipulators": [
-                    {
-                      "from": {
-                        "key_code": "right_command",
-                        "modifiers": {
-                          "optional": [
-                            "any"
-                          ]
-                        }
-                      },
-                      "to": [
-                        {
-                          "key_code": "left_shift",
-                          "modifiers": [
-                            "left_command",
-                            "left_control",
-                            "left_option"
-                          ]
-                        }
-                      ],
-                      "type": "basic"
-                    }
-                  ]
-                }
-              ]
-            },
-            "devices": [
+          "global": {
+              "check_for_updates_on_startup": true,
+              "show_in_menu_bar": true,
+              "show_profile_name_in_menu_bar": false,
+              "unsafe_ui": false
+          },
+          "profiles": [
               {
-                "disable_built_in_keyboard_if_exists": true,
-                "fn_function_keys": [],
-                "identifiers": {
-                  "is_keyboard": true,
-                  "is_pointing_device": false,
-                  "product_id": 34050,
-                  "vendor_id": 2652
-                },
-                "ignore": false,
-                "manipulate_caps_lock_led": true,
-                "simple_modifications": [
-                  {
-                    "from": {
-                      "key_code": "left_command"
-                    },
-                    "to": [
-                      {
-                        "key_code": "left_option"
-                      }
-                    ]
+              "complex_modifications": {
+                  "parameters": {
+                      "basic.simultaneous_threshold_milliseconds": 50,
+                      "basic.to_delayed_action_delay_milliseconds": 500,
+                      "basic.to_if_alone_timeout_milliseconds": 1000,
+                      "basic.to_if_held_down_threshold_milliseconds": 500,
+                      "mouse_motion_to_scroll.speed": 100
                   },
+                  "rules": [
+                  <<cmd_backslash>>,
+                   <<cmd_space>>,
+                   <<cmd_shift_a>>,
+                   <<capslock_to_ctrl/escape>>,
+                   <<right_command_to_hyper>>,
+                   <<map_command_tab_to_option_tab_under_vmware_horizon>>,
+                   <<map_option_tab_to_command_tab_under_vmware_horizon>>
+                  ]
+              },
+              "devices": [
                   {
-                    "from": {
-                      "key_code": "left_option"
-                    },
-                    "to": [
+                  "disable_built_in_keyboard_if_exists": true,
+                  "fn_function_keys": [],
+                  "identifiers": {
+                      "is_keyboard": true,
+                      "is_pointing_device": false,
+                      "product_id": 34050,
+                      "vendor_id": 2652
+                  },
+                  "ignore": false,
+                  "manipulate_caps_lock_led": true,
+                  "simple_modifications": [
                       {
-                        "key_code": "left_gui"
+                      "from": {
+                          "key_code": "left_command"
+                      },
+                      "to": [
+                          {
+                          "key_code": "left_option"
                       }
-                    ]
+                      ]
+                  },
+                      {
+                      "from": {
+                          "key_code": "left_option"
+                      },
+                      "to": [
+                          {
+                          "key_code": "left_gui"
+                      }
+                      ]
                   }
-                ],
-                "treat_as_built_in_keyboard": false
+                  ],
+                  "treat_as_built_in_keyboard": false
               },
-              {
-                "disable_built_in_keyboard_if_exists": false,
-                "fn_function_keys": [],
-                "identifiers": {
-                  "is_keyboard": true,
-                  "is_pointing_device": false,
-                  "product_id": 632,
-                  "vendor_id": 1452
-                },
-                "ignore": false,
-                "manipulate_caps_lock_led": true,
-                "simple_modifications": [],
-                "treat_as_built_in_keyboard": false
+                  {
+                  "disable_built_in_keyboard_if_exists": false,
+                  "fn_function_keys": [],
+                  "identifiers": {
+                      "is_keyboard": true,
+                      "is_pointing_device": false,
+                      "product_id": 632,
+                      "vendor_id": 1452
+                  },
+                  "ignore": false,
+                  "manipulate_caps_lock_led": true,
+                  "simple_modifications": [],
+                  "treat_as_built_in_keyboard": false
               },
-              {
-                "disable_built_in_keyboard_if_exists": false,
-                "fn_function_keys": [],
-                "identifiers": {
-                  "is_keyboard": false,
-                  "is_pointing_device": true,
-                  "product_id": 632,
-                  "vendor_id": 1452
-                },
-                "ignore": true,
-                "manipulate_caps_lock_led": false,
-                "simple_modifications": [],
-                "treat_as_built_in_keyboard": false
+                  {
+                  "disable_built_in_keyboard_if_exists": false,
+                  "fn_function_keys": [],
+                  "identifiers": {
+                      "is_keyboard": false,
+                      "is_pointing_device": true,
+                      "product_id": 632,
+                      "vendor_id": 1452
+                  },
+                  "ignore": true,
+                  "manipulate_caps_lock_led": false,
+                  "simple_modifications": [],
+                  "treat_as_built_in_keyboard": false
               },
-              {
-                "disable_built_in_keyboard_if_exists": false,
-                "fn_function_keys": [],
-                "identifiers": {
-                  "is_keyboard": false,
-                  "is_pointing_device": true,
-                  "product_id": 12314,
-                  "vendor_id": 16700
-                },
-                "ignore": true,
-                "manipulate_caps_lock_led": false,
-                "simple_modifications": [],
-                "treat_as_built_in_keyboard": false
+                  {
+                  "disable_built_in_keyboard_if_exists": false,
+                  "fn_function_keys": [],
+                  "identifiers": {
+                      "is_keyboard": false,
+                      "is_pointing_device": true,
+                      "product_id": 12314,
+                      "vendor_id": 16700
+                  },
+                  "ignore": true,
+                  "manipulate_caps_lock_led": false,
+                  "simple_modifications": [],
+                  "treat_as_built_in_keyboard": false
               },
-              {
-                "disable_built_in_keyboard_if_exists": false,
-                "fn_function_keys": [],
-                "identifiers": {
-                  "is_keyboard": true,
-                  "is_pointing_device": true,
-                  "product_id": 591,
-                  "vendor_id": 1452
-                },
-                "ignore": true,
-                "manipulate_caps_lock_led": true,
-                "simple_modifications": [],
-                "treat_as_built_in_keyboard": false
+                  {
+                  "disable_built_in_keyboard_if_exists": false,
+                  "fn_function_keys": [],
+                  "identifiers": {
+                      "is_keyboard": true,
+                      "is_pointing_device": true,
+                      "product_id": 591,
+                      "vendor_id": 1452
+                  },
+                  "ignore": true,
+                  "manipulate_caps_lock_led": true,
+                  "simple_modifications": [],
+                  "treat_as_built_in_keyboard": false
               },
-              {
-                "disable_built_in_keyboard_if_exists": false,
-                "fn_function_keys": [],
-                "identifiers": {
-                  "is_keyboard": true,
-                  "is_pointing_device": false,
-                  "product_id": 591,
-                  "vendor_id": 1452
-                },
-                "ignore": false,
-                "manipulate_caps_lock_led": true,
-                "simple_modifications": [],
-                "treat_as_built_in_keyboard": false
+                  {
+                  "disable_built_in_keyboard_if_exists": false,
+                  "fn_function_keys": [],
+                  "identifiers": {
+                      "is_keyboard": true,
+                      "is_pointing_device": false,
+                      "product_id": 591,
+                      "vendor_id": 1452
+                  },
+                  "ignore": false,
+                  "manipulate_caps_lock_led": true,
+                  "simple_modifications": [],
+                  "treat_as_built_in_keyboard": false
               },
-              {
-                "disable_built_in_keyboard_if_exists": false,
-                "fn_function_keys": [],
-                "identifiers": {
-                  "is_keyboard": true,
-                  "is_pointing_device": false,
-                  "product_id": 34304,
-                  "vendor_id": 1452
-                },
-                "ignore": false,
-                "manipulate_caps_lock_led": true,
-                "simple_modifications": [],
-                "treat_as_built_in_keyboard": false
+                  {
+                  "disable_built_in_keyboard_if_exists": false,
+                  "fn_function_keys": [],
+                  "identifiers": {
+                      "is_keyboard": true,
+                      "is_pointing_device": false,
+                      "product_id": 34304,
+                      "vendor_id": 1452
+                  },
+                  "ignore": false,
+                  "manipulate_caps_lock_led": true,
+                  "simple_modifications": [],
+                  "treat_as_built_in_keyboard": false
               }
-            ],
-            "fn_function_keys": [
-              {
-                "from": {
-                  "key_code": "f1"
-                },
-                "to": [
+              ],
+              "fn_function_keys": [
                   {
-                    "consumer_key_code": "display_brightness_decrement"
+                  "from": {
+                      "key_code": "f1"
+                  },
+                  "to": [
+                      {
+                      "consumer_key_code": "display_brightness_decrement"
                   }
-                ]
+                  ]
               },
-              {
-                "from": {
-                  "key_code": "f2"
-                },
-                "to": [
                   {
-                    "consumer_key_code": "display_brightness_increment"
+                  "from": {
+                      "key_code": "f2"
+                  },
+                  "to": [
+                      {
+                      "consumer_key_code": "display_brightness_increment"
                   }
-                ]
+                  ]
               },
-              {
-                "from": {
-                  "key_code": "f3"
-                },
-                "to": [
                   {
-                    "apple_vendor_keyboard_key_code": "mission_control"
+                  "from": {
+                      "key_code": "f3"
+                  },
+                  "to": [
+                      {
+                      "apple_vendor_keyboard_key_code": "mission_control"
                   }
-                ]
+                  ]
               },
-              {
-                "from": {
-                  "key_code": "f4"
-                },
-                "to": [
                   {
-                    "apple_vendor_keyboard_key_code": "spotlight"
+                  "from": {
+                      "key_code": "f4"
+                  },
+                  "to": [
+                      {
+                      "apple_vendor_keyboard_key_code": "spotlight"
                   }
-                ]
+                  ]
               },
-              {
-                "from": {
-                  "key_code": "f5"
-                },
-                "to": [
                   {
-                    "consumer_key_code": "dictation"
+                  "from": {
+                      "key_code": "f5"
+                  },
+                  "to": [
+                      {
+                      "consumer_key_code": "dictation"
                   }
-                ]
+                  ]
               },
-              {
-                "from": {
-                  "key_code": "f6"
-                },
-                "to": [
                   {
-                    "key_code": "f6"
+                  "from": {
+                      "key_code": "f6"
+                  },
+                  "to": [
+                      {
+                      "key_code": "f6"
                   }
-                ]
+                  ]
               },
-              {
-                "from": {
-                  "key_code": "f7"
-                },
-                "to": [
                   {
-                    "consumer_key_code": "rewind"
+                  "from": {
+                      "key_code": "f7"
+                  },
+                  "to": [
+                      {
+                      "consumer_key_code": "rewind"
                   }
-                ]
+                  ]
               },
-              {
-                "from": {
-                  "key_code": "f8"
-                },
-                "to": [
                   {
-                    "consumer_key_code": "play_or_pause"
+                  "from": {
+                      "key_code": "f8"
+                  },
+                  "to": [
+                      {
+                      "consumer_key_code": "play_or_pause"
                   }
-                ]
+                  ]
               },
-              {
-                "from": {
-                  "key_code": "f9"
-                },
-                "to": [
                   {
-                    "consumer_key_code": "fast_forward"
+                  "from": {
+                      "key_code": "f9"
+                  },
+                  "to": [
+                      {
+                      "consumer_key_code": "fast_forward"
                   }
-                ]
+                  ]
               },
-              {
-                "from": {
-                  "key_code": "f10"
-                },
-                "to": [
                   {
-                    "consumer_key_code": "mute"
+                  "from": {
+                      "key_code": "f10"
+                  },
+                  "to": [
+                      {
+                      "consumer_key_code": "mute"
                   }
-                ]
+                  ]
               },
-              {
-                "from": {
-                  "key_code": "f11"
-                },
-                "to": [
                   {
-                    "consumer_key_code": "volume_decrement"
+                  "from": {
+                      "key_code": "f11"
+                  },
+                  "to": [
+                      {
+                      "consumer_key_code": "volume_decrement"
                   }
-                ]
+                  ]
               },
-              {
-                "from": {
-                  "key_code": "f12"
-                },
-                "to": [
                   {
-                    "consumer_key_code": "volume_increment"
+                  "from": {
+                      "key_code": "f12"
+                  },
+                  "to": [
+                      {
+                      "consumer_key_code": "volume_increment"
                   }
-                ]
+                  ]
               }
-            ],
-            "name": "macos",
-            "parameters": {
-              "delay_milliseconds_before_open_device": 1000
-            },
-            "selected": true,
-            "simple_modifications": [],
-            "virtual_hid_keyboard": {
-              "country_code": 0,
-              "indicate_sticky_modifier_keys_state": true,
-              "mouse_key_xy_scale": 100
-            }
+              ],
+              "name": "macos",
+              "parameters": {
+                  "delay_milliseconds_before_open_device": 1000
+              },
+              "selected": true,
+              "simple_modifications": [],
+              "virtual_hid_keyboard": {
+                  "country_code": 0,
+                  "indicate_sticky_modifier_keys_state": true,
+                  "mouse_key_xy_scale": 100
+              }
           }
-        ]
+          ]
       }
     #+END_SRC
 
